[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/custom/sourcecodepro_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/custom/sourcecodepro_14.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/menu/character_selection/SelectionScreen/SelectionScene.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/greenbg.tres" type="Texture" id=5]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 719.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 719.0
color = Color( 0.1246, 0.14, 0.1246, 1 )

[node name="vbox_main" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_topbar" type="HBoxContainer" parent="MarginContainer/vbox_main"]
margin_right = 1280.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="panel_characterselect" type="MarginContainer" parent="MarginContainer/vbox_main/hbox_topbar"]
margin_left = 880.0
margin_right = 1280.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 75 )
size_flags_horizontal = 10
theme = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/vbox_main/hbox_topbar/panel_characterselect"]
margin_right = 400.0
margin_bottom = 75.0
texture = ExtResource( 5 )

[node name="label_characterselect" type="Label" parent="MarginContainer/vbox_main/hbox_topbar/panel_characterselect"]
margin_right = 400.0
margin_bottom = 75.0
size_flags_horizontal = 9
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "character select"
align = 1
valign = 1
uppercase = true

[node name="margin_userboxes" type="MarginContainer" parent="MarginContainer/vbox_main"]
margin_top = 79.0
margin_right = 1280.0
margin_bottom = 655.0
size_flags_vertical = 3
custom_constants/margin_right = 90
custom_constants/margin_top = 30
custom_constants/margin_left = 90
custom_constants/margin_bottom = 30

[node name="hbox_userboxes" type="HBoxContainer" parent="MarginContainer/vbox_main/margin_userboxes"]
margin_left = 90.0
margin_top = 30.0
margin_right = 1190.0
margin_bottom = 546.0
custom_constants/separation = 20

[node name="hbox_bottombar" type="HBoxContainer" parent="MarginContainer/vbox_main"]
margin_top = 659.0
margin_right = 1280.0
margin_bottom = 719.0
rect_min_size = Vector2( 0, 60 )
custom_constants/separation = 12

[node name="panel_waiting" type="MarginContainer" parent="MarginContainer/vbox_main/hbox_bottombar"]
margin_left = 490.0
margin_right = 790.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
theme = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/vbox_main/hbox_bottombar/panel_waiting"]
margin_right = 300.0
margin_bottom = 60.0
texture = ExtResource( 5 )

[node name="label_waiting" type="Label" parent="MarginContainer/vbox_main/hbox_bottombar/panel_waiting"]
margin_right = 300.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Waiting for players..."
align = 1
valign = 1
uppercase = true
